# epitype

./: .gitignore  CHANGELOG.md  README.md  TASKS.md  WORKPLAN.md  pyproject.toml
src/epitype/: __init__.py
src/epitype/analysis/: __init__.py  pipeline.py
src/epitype/cli/: __init__.py  common.py  energy.py  hbonds.py  main.py  packstat.py  run.py  sasa.py  shape.py  smoke.py
src/epitype/core/: __init__.py  interface.py  separation.py  structure.py  types.py
src/epitype/data/: __init__.py
src/epitype/io/: __init__.py  download.py  parsers.py  writers.py
src/epitype/metrics/: __init__.py  energy.py  hbonds.py  packstat.py  sasa.py  shape.py
src/epitype/surface/: __init__.py  nanoshaper.py  types.py
src/epitype/utils/: __init__.py  geometry.py  imports.py
tests/: __init__.py  conftest.py
tests/data/: README.md
tests/data/expected/: 1YY9_metrics.json  4FQI_metrics.json
tests/e2e/: test_full_analysis.py
tests/integration/: test_api.py  test_cli.py  test_pipeline.py
tests/unit/: test_bin.py  test_download.py  test_energy.py  test_geometry.py  test_hbonds.py  test_interface.py  test_nanoshaper.py  test_packstat.py  test_parsers.py  test_sasa.py  test_separation.py  test_shape.py  test_structure.py  test_writers.py
